# camera_VC0706

./: CMakeLists.txt  README.md
camPTC08/: CMakeLists.txt
camPTC08/Include/: camPTC08.h  command.h  iserialport.h  serialport_fcntl.h  serialport_qt.h
camPTC08/Source/: camPTC08.cpp  serialport_fcntl.cpp  serialport_qt.cpp
example/: CMakeLists.txt  main.cpp
